<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="title_agreement">Пользовательское соглашение</string>
    <string name="title_support">Написать в поддержку</string>
    <string name="title_share">Поделиться приложением</string>
    <string name="share_uri">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="author_email">vdbalcer.android@ya.ru</string>
    <string name="write_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terns_uri">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="track_descriptor">%1$s • %2$s</string>
    <string name="refresh">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="internet_error_title">Проблемы со связью</string>
    <string name="internet_error_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="clicked_tracks_title">Вы искали</string>
    <string name="track_artwork_image_description">Изображение альбома трека</string>
    <string name="country_title">Страна</string>
    <string name="genre_title">Жанр</string>
    <string name="year_title">Год</string>
    <string name="album_title">Альбом</string>
    <string name="track_time_title">Длительность</string>

    <string name="library">Медиатека</string>
    <string name="library_new_playlist_button_text">Новый плейлист</string>
    <string name="library_new_lib_placeholder_title_text">Вы не создали \nни одного плейлиста</string>
    <string name="library_favorite_placeholder_title_text">Ваша медиатека пуста</string>
    <string name="favorite_tab_title">Избранные треки</string>
    <string name="playlists_tab_title">Плейлисты</string>
    <string name="create_button_text">Создать</string>
    <string name="create_playlist_name_hint">Название*</string>
    <string name="create_playlist_description_hint">Описание</string>
    <string name="playlist_creation_title">Новый плейлист</string>
    <string name="track_player_bottom_sheet_title">Добавить в плейлист</string>
    <string name="nothing_choosen_toast_text">Вы ничего не выбрали</string>
    <string name="new_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_dialog_neutral_button_text">Отмена</string>
    <string name="new_playlist_dialog_positive_button_text">Завершить</string>
    <string name="new_playlist_creation_message">Плейлист %1$s успешно создан!</string>
    <string name="track_player_add_to_playlist_success_message">Добавлено в плейлист «%1$s»</string>
    <string name="track_player_already_added_to_playlist_message">Трек уже добавлен в плейлист «%1$s»</string>
    <plurals name="track_count">
        <item quantity="one">%1$d трек</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="playlist_descriptor">%1$s • %2$s</string>
    <string name="remove_track_dialog_title">Хотите удалить трек?</string>
    <string name="remove_track_dialog_negative_text">Нет</string>
    <string name="remove_track_dialog_positive_text">Да</string>
    <string name="empty_playlist_toast_text">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="new_playlist_update_message">Плейлист %1$s успешно обновлен!</string>
    <string name="remove_track_dialog_title_text">Хотите удалить плейлист?</string>
    <string name="edit_playlist_button_text">Сохранить</string>
    <string name="playlist_share_text">Поделиться</string>
    <string name="playlist_edit_playlist_text">Редактировать информацию</string>
    <string name="playlist_delete_text">Удалить плейлист</string>
    <string name="playlist_no_added_tracks_placeholder_description">Отсутствуют треки в плейлисте</string>
</resources>