<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/SettingItemTextView"
        android:text="@string/dark_mode"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_app"
        style="@style/SettingItemTextView"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/title_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/write_support"
        style="@style/SettingItemTextView"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/title_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/terms"
        style="@style/SettingItemTextView"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/title_agreement" />

</LinearLayout>