<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/libraryFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.search.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_trackPlayerFragment"
            app:destination="@id/trackPlayerFragment" />
    </fragment>
    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.example.playlistmaker.library.ui.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_libraryFragment_to_trackPlayerFragment"
            app:destination="@id/trackPlayerFragment" />
        <action
            android:id="@+id/action_libraryFragment_to_newPlaylistFragment"
            app:destination="@id/newPlaylistFragment" />
        <action
            android:id="@+id/action_libraryFragment_to_playlistScreenFragment"
            app:destination="@id/playlistScreenFragment" />
        <action
            android:id="@+id/action_libraryFragment_self"
            app:destination="@id/libraryFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.settings.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/trackPlayerFragment"
        android:name="com.example.playlistmaker.player.ui.TrackPlayerFragment"
        android:label=""
        tools:layout="@layout/track_player" >
        <action
            android:id="@+id/action_trackPlayerFragment_to_newPlaylistFragment"
            app:destination="@id/newPlaylistFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.playlistmaker.library.ui.favorite.FavoriteFragment"
        android:label="fragment_library_favorite"
        tools:layout="@layout/fragment_library_favorite" >

    </fragment>
    <fragment
        android:id="@+id/newPlaylistFragment"
        android:name="com.example.playlistmaker.library.ui.new_playlist.NewPlaylistFragment"
        android:label="@string/playlist_creation_title"
        tools:layout="@layout/playlist_creation" />
    <fragment
        android:id="@+id/playlistScreenFragment"
        android:name="com.example.playlistmaker.library.ui.playlist_screen.PlaylistScreenFragment"
        android:label=""
        tools:layout="@layout/fragment_playlist_screen" >
        <action
            android:id="@+id/action_playlistScreenFragment_to_trackPlayerFragment"
            app:destination="@id/trackPlayerFragment" />
        <action
            android:id="@+id/action_playlistScreenFragment_to_editPlaylistFragment"
            app:destination="@id/editPlaylistFragment" />
    </fragment>
    <fragment
        android:id="@+id/playlistsFragment"
        android:name="com.example.playlistmaker.library.ui.playlists.PlaylistsFragment"
        android:label="fragment_library_playlists"
        tools:layout="@layout/fragment_library_playlists" >
    </fragment>
    <fragment
        android:id="@+id/editPlaylistFragment"
        android:name="com.example.playlistmaker.library.ui.new_playlist.EditPlaylistFragment"
        android:label="Редактировать"
        tools:layout="@layout/playlist_creation"/>
</navigation>