<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/CommonToolbar"
        app:title="@string/search" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        style="?attr/textInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:paddingHorizontal="@dimen/search_edit_text_padding_horizontal"
        android:paddingVertical="@dimen/search_edit_text_padding_vertical"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/search_edit_text_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/search_edit_text_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/search_edit_text_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/search_edit_text_corner_radius"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/ic_cross"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingVertical="0dp"
            android:paddingStart="36dp"
            android:paddingEnd="40dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/common_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/clicked_tracks_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            style="@style/PlaceholderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="16dp"
            android:paddingTop="18dp"
            android:paddingBottom="12dp"
            android:text="@string/clicked_tracks_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks_history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_track" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history_button"
            style="@style/PlaceholderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/clear_history_button_text" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/item_track" />

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholder_im"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/placeholder_title"
            style="@style/PlaceholderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/placeholder_text_margins"
            android:layout_marginBottom="@dimen/placeholder_text_margins" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/placeholder_description"
            style="@style/PlaceholderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/placeholder_text_margins"
            android:layout_marginBottom="@dimen/placeholder_text_margins" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/placeholder_button"
            style="@style/PlaceholderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh" />
    </LinearLayout>

</LinearLayout>