<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/CommonToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/track_player_side_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/track_player_side_guideline" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/track_artwork_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/track_artwork_image_description"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:srcCompat="@drawable/track_placeholder" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_title"
            style="@style/TrackPlayerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_artwork_image"
            tools:text="Название трека" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/artist_name"
            style="@style/TrackPlayerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/track_player_artist_name_text_size"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_title"
            tools:text="Группа или исполнитель" />

        <ImageButton
            android:id="@+id/add_track_button"
            android:layout_width="@dimen/track_player_additional_buttons_size"
            android:layout_height="@dimen/track_player_additional_buttons_size"
            android:layout_marginTop="54dp"
            android:background="@drawable/round_button"
            app:layout_constraintEnd_toStartOf="@id/main_player_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:srcCompat="@drawable/ic_add_track" />

        <ImageButton
            android:id="@+id/main_player_button"
            android:layout_width="@dimen/track_player_main_button_size"
            android:layout_height="@dimen/track_player_main_button_size"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            app:layout_constraintEnd_toStartOf="@id/add_favorite_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/add_track_button"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:srcCompat="@drawable/ic_play"/>

        <ImageButton
            android:id="@+id/add_favorite_button"
            android:layout_width="@dimen/track_player_additional_buttons_size"
            android:layout_height="@dimen/track_player_additional_buttons_size"
            android:layout_marginTop="54dp"
            android:background="@drawable/round_button"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/main_player_button"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:srcCompat="@drawable/ic_unchoosed_heart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_timer"
            style="@style/TrackPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="00:00"
            android:textSize="@dimen/track_player_timer_text_size"
            app:layout_constraintEnd_toEndOf="@id/main_player_button"
            app:layout_constraintStart_toStartOf="@id/main_player_button"
            app:layout_constraintTop_toBottomOf="@id/main_player_button" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/track_info_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="track_info_tag" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_time_title"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/track_time_title"
            android:textAlignment="viewStart"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="track_info_tag"
            app:layout_constraintTop_toBottomOf="@id/track_timer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_time_content"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/track_time_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_info_barrier"
            tools:text="00:00" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_album_title"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="wrap_content"
            android:text="@string/album_title"
            android:textAlignment="viewStart"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="track_info_tag"
            app:layout_constraintTop_toBottomOf="@id/track_time_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_album_content"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="0dp"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/track_album_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_info_barrier"
            tools:text="Название альбома" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_year_title"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="wrap_content"
            android:text="@string/year_title"
            android:textAlignment="viewStart"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="track_info_tag"
            app:layout_constraintTop_toBottomOf="@id/track_album_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_year_content"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="0dp"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/track_year_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_info_barrier"
            tools:text="Год выпуска" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_genre_title"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="wrap_content"
            android:text="@string/genre_title"
            android:textAlignment="viewStart"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="track_info_tag"
            app:layout_constraintTop_toBottomOf="@id/track_year_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_genre_content"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="0dp"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/track_genre_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_info_barrier"
            tools:text="Название жанра" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_country_title"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="wrap_content"
            android:text="@string/country_title"
            android:textAlignment="viewStart"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="track_info_tag"
            app:layout_constraintTop_toBottomOf="@id/track_genre_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track_country_content"
            style="@style/TrackPlayerInfoItem"
            android:layout_width="0dp"
            android:textAlignment="viewEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/track_country_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_info_barrier"
            tools:text="Страна выпуска" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>